--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,8 +21,9 @@
         android:layout_height="100dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="38dp"
         cst:a_color="@color/colorPrimary"
-        cst:a_size="45dp" />
+        cst:a_size="100dp" />
 
 </RelativeLayout>
